clusters/homelab/apps/deluge/isolated/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deluge
  namespace: deluge
  labels:
    app.kubernetes.io/name: deluge
    app.kubernetes.io/part-of: homelab-media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: deluge
      app.kubernetes.io/name: deluge
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 8112
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
      ports:
        - port: 8112
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9797
          protocol: TCP
  egress:
    - {}
